--- a/package.json
+++ b/package.json
@@ -1,16 +1,44 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "abukeans-construction",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Professional construction services website - Abukeans Investment Ltd",
+  "author": "Your Name",
+  "license": "ISC",
+  "homepage": "https://github.com/markgiddy/abukeans#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/markgiddy/abukeans.git"
+  },
+  "bugs": {
+    "url": "https://github.com/markgiddy/abukeans/issues"
+  },
+  "keywords": [
+    "construction",
+    "react",
+    "typescript",
+    "vite"
+  ],
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "node server.js",
+    "production": "NODE_ENV=production node server.js",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
