--- a/deploy.env
+++ b/deploy.env
@@ -11,7 +11,7 @@ VITE_APP_TITLE=Abukeans Investment Ltd
 # Email Configuration (Optional)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
+SMTP_USER=moseskipyegonm@gmail.com
 SMTP_PASS=your-app-password
 CONTACT_EMAIL=info@abukeansinvestment.com
 
