--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "compression": "^1.7.4",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
