--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "@vercel/analytics": "^1.5.0",
     "compression": "^1.7.4",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
